@@ -1,5 +1,8 @@
 2004-10-30  Andrew Cagney  <cagney@gnu.org>
 
+	* mips-tdep.c (struct frame_extra_info): Delete.
+	(temp_proc_desc): Delete.
+
 	* config/alpha/tm-alpha.h (MDEBUG_EFI_SYMBOL_NAME): Rename
 	MIPS_EFI_SYMBOL_NAME.
 	(mips_extra_func_info_t, mips_extra_func_info): Delete.
